Don't worry about the max permgen because of current minimum JAVA version (17)